@@ -13,7 +13,8 @@ my %WriteMakefileArgs = (
   "AUTHOR" => "Edward Baudrez <ebaudrez\@cpan.org>",
   "BUILD_REQUIRES" => {},
   "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => "6.30"
+    "ExtUtils::MakeMaker" => "6.30",
+    "PDL::Core::Dev" => 0
   },
   "DISTNAME" => "PDL-NDBin",
   "EXE_FILES" => [],
@@ -57,41 +58,30 @@ my %WriteMakefileArgs = (
 );
 
 
-my %FallbackPrereqs = (
-  "Carp" => 0,
-  "Class::Load" => 0,
-  "Data::Dumper" => 0,
-  "Exporter" => 0,
-  "File::Spec" => 0,
-  "IO::Handle" => 0,
-  "IPC::Open3" => 0,
-  "List::MoreUtils" => 0,
-  "List::Util" => 0,
-  "Log::Any" => 0,
-  "Math::Round" => 0,
-  "Module::Pluggable" => "3.1",
-  "PDL" => "2.004",
-  "PDL::Lite" => 0,
-  "PDL::Types" => 0,
-  "POSIX" => 0,
-  "Params::Validate" => 0,
-  "Test::Deep" => 0,
-  "Test::Exception" => 0,
-  "Test::More" => "0.88",
-  "Test::NoWarnings" => 0,
-  "Test::PDL" => "0.10",
-  "UUID::Tiny" => 0,
-  "XSLoader" => 0,
-  "integer" => 0,
-  "strict" => 0,
-  "warnings" => 0
-);
-
-
 unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
-  delete $WriteMakefileArgs{TEST_REQUIRES};
-  delete $WriteMakefileArgs{BUILD_REQUIRES};
-  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+  my $tr = delete $WriteMakefileArgs{TEST_REQUIRES};
+  my $br = $WriteMakefileArgs{BUILD_REQUIRES};
+  for my $mod ( keys %$tr ) {
+    if ( exists $br->{$mod} ) {
+      $br->{$mod} = $tr->{$mod} if $tr->{$mod} > $br->{$mod};
+    }
+    else {
+      $br->{$mod} = $tr->{$mod};
+    }
+  }
+}
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.56) } ) {
+  my $br = delete $WriteMakefileArgs{BUILD_REQUIRES};
+  my $pp = $WriteMakefileArgs{PREREQ_PM};
+  for my $mod ( keys %$br ) {
+    if ( exists $pp->{$mod} ) {
+      $pp->{$mod} = $br->{$mod} if $br->{$mod} > $pp->{$mod};
+    }
+    else {
+      $pp->{$mod} = $br->{$mod};
+    }
+  }
 }
 
 delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
