@@ -1,7 +1,5 @@
 =pod
 
-=encoding UTF-8
-
 =head1 NAME
 
 PDL::NDBin - Multidimensional binning & histogramming
