@@ -11,6 +11,8 @@ directory           = t
 directory           = tools
 [AutoPrereqs]
 skip                = ^PDL::NDBin::Actions_PP$
+[Prereqs / ConfigureRequires]
+PDL::Core::Dev      = 0     ; RT #91304
 [Prereqs / TestRequires]
 PDL                 = 2.004 ; at least 2.4.0 for PDL::Types::types
 Module::Pluggable   = 3.1   ; earlier versions don't seem to work well in our tests
